unify max width to stop items overflowing containers (#1163)

--- a/public/src/stylesheets/app/_overrides.scss
+++ b/public/src/stylesheets/app/_overrides.scss
@@ -2,6 +2,11 @@
   @extend .govuk-link--no-visited-state;
 }
 
+.govuk-width-container,
+.moj-primary-navigation__container {
+  max-width: 1220px;
+}
+
 .pac-\!-no-underline {
   text-decoration: none;
 }
